# siksha-crawler

./: .dockerignore  .gitignore  Dockerfile  Makefile  Pipfile  README.md  handler.py  menu_crawler.py  package-lock.json  package.json  pyproject.toml  requirements.txt  serverless.yml  slack.py
.github/: ecr-dev.yml  ecr-prod.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ecr-dev.yml  ecr-prod.yml  lint.yml
crawlers/: base_crawler.py  snuco_crawler.py  snudorm_crawler.py  vet_crawler.py
