[tool.poetry]
name = "siksha-crawler"
version = "0.1.0"
description = "Siksha's Web Crawler"
authors = [
  "Dohyeon Kim <ladig1017@gmail.com>",
  "Yujin Im <jina0605@gmail.com>"
]
maintainers = [
  "Daeyong Jeong <iwin1203@naver.com>",
  "Hyungwook Choi <chooi221@snu.ac.kr>",
  "Yoonsoo Park <junepark1211@snu.ac.kr>",
  "Youngzoo Park <enkeejuniour@snu.ac.kr>",
  "Jaewan Park <jaejae1112@gmail.com>"
]
readme = "README.md"
repository = "https://github.com/wafflestudio/siksha-crawler"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.4"
beautifulsoup4 = "^4.12.2"
chardet = "^5.1.0"
click = "^8.1.5"
cryptography = "^41.0.2"
mypy-extensions = "^1.0.0"
pathspec = "^0.11.1"
platformdirs = "^3.8.1"
pymysql = "^1.1.0"
pytz = "^2023.3"
requests = "^2.31.0"
tomli = "^2.0.1"
typing-extensions = "^4.7.1"
urllib3 = "^2.0.3"

[tool.black]
line-length = 120
target-version = ['py310']
exclude = '''
/(
  \.git
  | \.venv
)/
'''

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
disable = 'C,R,I,import-error,not-callable'

[tool.pylint]
ignore=[".venv", ".git"]

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pylint = "^2.17.4"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
